[tool.poetry]
name = "test-dependabot"
version = "0.1.0"
description = ""
authors = ["angiexiong <363068948@qq.com>"]
readme = "README.md"
packages = [{include = "test_dependabot"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pylint = "^2.14.0"
pretend-private-package = "^0.2.1"
insecure-package = "^0.1.0"
py7zr = "^0.18.0"


[[tool.poetry.source]]
name = "ax"
url = "https://test.pypi.org/simple/"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
